--- a/Swatches.sketchplugin/Contents/Resources/assets/style.css
+++ b/Swatches.sketchplugin/Contents/Resources/assets/style.css
@@ -175,23 +175,19 @@ header h1 {
     z-index: 1;
     display: block;
     float: left;
-    width: 26px;
-    height: 26px;
+    width: 32px !important;
+    height: 32px !important;
     margin: 2px;
     overflow: hidden;
     text-indent: -9999px;
-    border: 1px solid #fff;
+    border: none;
     box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
     background: #fff;
     box-sizing: border-box;
     border-radius: 2px;
-    transition: transform 100ms ease-in-out;
-    transform: scale3d( 1, 1, 1 );
 }
 .swatches button.focus {
-    z-index: 2;
-    transform: scale3d( 1.1, 1.1, 1 );
-    box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25), 0 0 0 1px rgba(0,0,0,0.55);
+    box-shadow: inset 0 0 0 1px #fff, inset 0 0 0 2px rgba(0,0,0,0.25), 0 0 0 2px #0069d9;
 }
 .swatches .colorgroup {
     clear: both;
@@ -235,6 +231,7 @@ header h1 {
     border-radius: 2px;
     float: left;
     margin: 16px 8px 16px 0;
+    box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
 }
 #colorName {
     display: block;
